# fhir

./: README.md  docker-compose.yml  vps.txt
fhir-gql/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  justfile  main.py  pyproject.toml
fhir-gql/app/: config.py  main.py
fhir-gql/app/auth/: dependencies.py  models.py  rbac.py
fhir-gql/app/core/: content_negotiation.py  errors.py  logging.py  middleware.py  redis.py  schema_utils.py
fhir-gql/app/di/: container.py  core.py
fhir-gql/app/errors/: auth.py
fhir-gql/app/fhir_client/: appointment.py  client.py  condition.py  encounter.py  healthcare_service.py  location.py  medication_request.py  observation.py  organization.py  patient.py  (+6 more)
fhir-server/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRODUCTION_READINESS_REPORT.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml  seed-all.sh
fhir-server/.claude/: settings.local.json
fhir-server/app/: main.py
fhir-server/docs/: Research Report.md  codeable-concepts.md  fhir-server-comprehensive-analysis.md  outpatient-scenario.md  pulse-middleware-architecture.md  telemedicine-scenario.md
fhir-server/migrations/: README.md  env.py
fhir-server/mock-data/: 01_organization.json  02_location.json  03_healthcare_service_cardiology.json  03_healthcare_service_gp.json  03_healthcare_service_neurology.json
fhir-server/scripts/: create_schema.py  load_terminology.ps1
fhir-server/terminology_data/: README.md
fhir-server/tests/: conftest.py
(+982 files in other folders)
