[project]
name = "fhir-gql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.1",
    "dependency-injector>=4.49.0",
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
]
